@@ -9,6 +9,8 @@ Changes in version 1.2.10
   * the editor buffer in the monitor has been increased from 120 to 160
     lines
   * memory dump is now also shown in ASCII format
+  * new execute ('x') type of breakpoints, the ignore data reads button
+    has been removed
   * in addition to the default hexadecimal format, it is also possible
     to specify numbers in the monitor in binary (e.g. %1010), octal
     (12o), and decimal (10l) format
@@ -18,8 +20,11 @@ Changes in version 1.2.10
   * the debugger prints more detailed information about syntax and
     runtime errors in Lua scripts, and there is a new button to insert
     an empty breakpoint callback function
+  * it is possible to delete single breakpoints in Lua scripts by using
+    a negative priority value
   * window icons have been implemented on non-Windows platforms if the
     emulator is built with FLTK 1.3.3 or newer
+  * the debugger window has been made resizeable within a limited range
   * audio output fixes and improvements, WASAPI is now supported on
     Windows
   * screenshots and printer output are saved in PNG format instead of
